Prevent horizontal scrolling

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@
 
 html {
   font-size: 100%;
+  overflow-x: hidden
 }
 
 body {
